--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "REACT_APP_API=9f9c59c1da7d67cf4e663ed7dce50af8 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
