--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "add": "^2.0.6",
     "dotenv": "^8.2.0",
     "node-sass": "^4.14.1",
     "query-string": "^6.13.1",
@@ -36,7 +37,7 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "REACT_APP_API=9f9c59c1da7d67cf4e663ed7dce50af8 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
